.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
A.F....... [ZBX-1946] fixed being able to create screen items with spans exceeding the size of the screen (Pavels)
A.F....... [ZBX-5619] Fixed errors when importing a template with an empty screen (Oleg)
..F....... [ZBX-3803] added session auto start check in frontend setup (Oleg)
..F....... [ZBX-5621] fixed custom trigger severities in user media configuration (Oleg)
..F....... [ZBX-5617] fixed class bug in triggers (Oleg)
A.F....... [ZBX-5046] fixed error message when delete globalmacro if macro doesn't exist (Oleg)
..F....... [ZBX-5595] Disabled "housekeeper" table updates when deleting a discovery rule or an item prototype (Oleg)
..F....... [ZBX-5596] Login form input field width fix (Oleg)
..F....... [ZBX-5629] fixed javascript error if user media contains doublequote (Oleg)
..F....... [ZBX-5580] fixed graphs grid for negative values (Oleg)
..F....... [ZBX-1825] fixed clickable text on popup menu headers (Oleg)
...G...... [ZBX-4355] fixed response on check inodes on file systems not supporting them (Sasha)
..F....... [ZBX-3934] unified color codes validation in frontend (Vedmak)
A......... [ZBX-3684] fixed template.get method returns excessive 'hostid' field (Vedmak)
A......... [ZBX-5498] improved performance of template linkage operations in API (Vedmak)
A......... [ZBX-5498] applications api refactoring (Vedmak)
..F....... [ZBX-5560] fixed recovery sound saved incorrectly in user profile (Vedmak)
..F....... [ZBX-2770] added autofocus for first fields in frontend forms (Vedmak)