@@ -10,6 +10,7 @@ New features:
 ..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
 
 Bug fixes:
+A......... [ZBX-4097] changed the "application", "host" and "group" parameters for item.get, trigger.get and triggerprototype.get to be case sensitive (Pavels)
 A.F....... [ZBX-1946] fixed being able to create screen items with spans exceeding the size of the screen (Pavels)
 A.F....... [ZBX-5619] Fixed errors when importing a template with an empty screen (Oleg)
 ..F....... [ZBX-3803] added session auto start check in frontend setup (Oleg)
